# contentagency

./: .env.example  .gitignore  API.md  CLAUDE.md  FRONTEND_INTEGRATION.md  README.md  REFACTORING.md  TESTING.md  agentic_content_agency_vision_feature_requirements.md  brainstorm_suggestions.md  postman_collection.json  pyproject.toml  report.md  temp.md  test_api.py  trend_research.md
bmad/_cfg/: files-manifest.csv  manifest.yaml
bmad/_cfg/ides/: claude-code.yaml
bmad/bmm/: config.yaml
bmad/core/: config.yaml
data/: brainstorm_results.json  recent_posts.json  user_interests.json
src/contentagency/: config.py  crew.py  debugging.ipynb  exceptions.py  main.py  web_ui.py
src/contentagency/api/: __init__.py  main.py  models.py
src/contentagency/config/: agents.yaml  tasks.yaml
src/contentagency/services/: crew_runner.py  data_service.py
src/contentagency/templates/: index.html
tests/: test_api.py  test_crew_runner.py  test_data_service.py  test_models.py
