[project]
name = "contentagency"
version = "0.1.0"
description = "ContentAgency using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
contentagency = "contentagency.main:run"
run_crew = "contentagency.main:run"
brainstorm = "contentagency.main:brainstorm"
train = "contentagency.main:train"
replay = "contentagency.main:replay"
test = "contentagency.main:test"
web_ui = "contentagency.web_ui:start_server"
api = "contentagency.api.main:start_api"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=7.0.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.24.0",  # For TestClient
]
